<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.langchain4j</groupId>
    <artifactId>quarkus-workshop-langchain4j-11</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <compiler-plugin.version>3.15.0</compiler-plugin.version>

        <quarkus.platform.version>3.31.4</quarkus.platform.version>
        <quarkus-langchain4j.version>1.8.0.CR2</quarkus-langchain4j.version>
        <jlama.version>0.8.4</jlama.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.quarkiverse.langchain4j</groupId>
                <artifactId>quarkus-langchain4j-bom</artifactId>
                <version>${quarkus-langchain4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>dev.langchain4j</groupId>
            <artifactId>langchain4j-embeddings-bge-small-en-q</artifactId>
        </dependency>

        <dependency>
            <groupId>dev.langchain4j</groupId>
            <artifactId>langchain4j-embeddings-bge-small-en-q</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkiverse.langchain4j</groupId>
            <artifactId>quarkus-langchain4j-pgvector</artifactId>
        </dependency>

        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-hibernate-orm-panache</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-jdbc-postgresql</artifactId>
        </dependency>

        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest</artifactId>
        </dependency>

        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-websockets-next</artifactId>
        </dependency>

        <!-- UI -->
        <dependency>
            <groupId>org.mvnpm</groupId>
            <artifactId>importmap</artifactId>
            <version>1.0.8</version>
        </dependency>
        <dependency>
            <groupId>org.mvnpm.at.mvnpm</groupId>
            <artifactId>vaadin-webcomponents</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.mvnpm</groupId>
            <artifactId>es-module-shims</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.mvnpm</groupId>
            <artifactId>wc-chatbot</artifactId>
            <version>0.2.1</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Observability -->
<!--        <dependency>-->
<!--            <groupId>io.quarkus</groupId>-->
<!--            <artifactId>quarkus-opentelemetry</artifactId>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.opentelemetry.instrumentation</groupId>-->
<!--            <artifactId>opentelemetry-jdbc</artifactId>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.quarkus</groupId>-->
<!--            <artifactId>quarkus-observability-devservices-lgtm</artifactId>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>io.quarkiverse.micrometer.registry</groupId>-->
<!--            <artifactId>quarkus-micrometer-registry-otlp</artifactId>-->
<!--            <version>3.3.1</version>-->
<!--        </dependency>-->

        <!-- Fault Tolerance -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-smallrye-fault-tolerance</artifactId>
        </dependency>

    </dependencies>

    <build>
         <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.7.1</version>
            </extension>
        </extensions>
        
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus.platform.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <goals>
                            <goal>build</goal>
                            <goal>generate-code</goal>
                            <goal>generate-code-tests</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmArgs>--enable-preview --enable-native-access=ALL-UNNAMED</jvmArgs>
                    <modules>
                        <module>jdk.incubator.vector</module>
                    </modules>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>openai</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>openai</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>io.quarkiverse.langchain4j</groupId>
                    <artifactId>quarkus-langchain4j-openai</artifactId>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>jlama</id>
            <activation>
                <property>
                    <name>jlama</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>io.quarkiverse.langchain4j</groupId>
                    <artifactId>quarkus-langchain4j-jlama</artifactId>
                </dependency>
                <dependency>
                    <groupId>com.github.tjake</groupId>
                    <artifactId>jlama-core</artifactId>
                    <version>${jlama.version}</version>
                </dependency>
                <dependency>
                    <groupId>com.github.tjake</groupId>
                    <artifactId>jlama-native</artifactId>
                    <version>${jlama.version}</version>
                    <classifier>${os.detected.classifier}</classifier>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
